add "Achievement" feature for game with achievements #193

--- a/source/Localization/LocSource.xaml
+++ b/source/Localization/LocSource.xaml
@@ -156,6 +156,8 @@ Especially useful for Xbox achievements with their larges images which are reduc
     <sys:String x:Key="LOCSuccessStoryListAchievements">List achievements</sys:String>
     <sys:String x:Key="LOCSuccessStoryAchievementSorting">Achievements sorting</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryFeatureAchievement">Feature to add if the game has achievements</sys:String>
+
     <!-- SuccessStoryOneGameView -->
 
     <sys:String x:Key="LOCSuccessStoryFirstUnlock">First unlock</sys:String>
