--- a/source/Views/SuccessStorySettingsView.xaml
+++ b/source/Views/SuccessStorySettingsView.xaml
@@ -12,6 +12,7 @@
              xmlns:SuccessStory="clr-namespace:SuccessStory"
              xmlns:controls="clr-namespace:CommonPluginsControls.Controls"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
+             xmlns:interfaces="clr-namespace:SuccessStory.Views.Interfaces"
              mc:Ignorable="d" d:DesignWidth="650"
              d:DataContext="{d:DesignInstance SuccessStory:SuccessStorySettingsViewModel}">
 
@@ -22,21 +23,6 @@
         <convertersshared:DefaultIconConverter x:Key="DefaultIconConverter" />
         <convertersshared:IndexConverter x:Key="IndexConverter"/>
         <converters:StringNullOrEmptyToBoolConverter x:Key="StringNullOrEmptyToBoolConverter"/>
-        
-        <local:OrderAchievementTypeToStringConverter x:Key="OrderAchievementTypeToStringConverter"/>
-        <local:OrderTypeToStringConverter x:Key="OrderTypeToStringConverter"/>
-
-        <ObjectDataProvider x:Key="OrderAchievementType" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="SuccessStory:OrderAchievementType"/>
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
-
-        <ObjectDataProvider x:Key="OrderType" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="SuccessStory:OrderType"/>
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
     </UserControl.Resources>
 
     <Grid Margin="20">
@@ -747,114 +733,6 @@
                                 </CheckBox>
                             </Grid>
                         </Grid>
-
-
-                        <Label Content="{DynamicResource LOCSuccessStoryListAchievements}" Margin="0,30,0,0" />
-                        <Separator Margin="0,0,0,10" />
-
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="10" />
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="10" />
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="10" />
-                                <RowDefinition Height="auto" />
-                            </Grid.RowDefinitions>
-                            
-                            <Grid Grid.Row="0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="10" />
-                                    <ColumnDefinition Width="160" />
-                                </Grid.ColumnDefinitions>
-
-                                <Label Grid.Column="0" Content="{DynamicResource LOCSuccessStoryAchievementSorting}" />
-                                <ComboBox Grid.Column="1" SelectedItem="{Binding Settings.OrderAchievementTypeFirst}"
-                                                          ItemsSource="{Binding Source={StaticResource OrderAchievementType}}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource OrderAchievementTypeToStringConverter}}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <ComboBox Grid.Column="3" SelectedItem="{Binding Settings.OrderTypeFirst}"
-                                                          ItemsSource="{Binding Source={StaticResource OrderType}}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource OrderTypeToStringConverter}}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                            </Grid>
-                            
-                            <Grid Grid.Row="2">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="10" />
-                                    <ColumnDefinition Width="160" />
-                                </Grid.ColumnDefinitions>
-
-                                <ComboBox Grid.Column="1" SelectedItem="{Binding Settings.OrderAchievementTypeSecond}"
-                                                          ItemsSource="{Binding Source={StaticResource OrderAchievementType}}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource OrderAchievementTypeToStringConverter}}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <ComboBox Grid.Column="3" SelectedItem="{Binding Settings.OrderTypeSecond}"
-                                                          ItemsSource="{Binding Source={StaticResource OrderType}}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource OrderTypeToStringConverter}}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                            </Grid>
-                            
-                            <Grid Grid.Row="4">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="10" />
-                                    <ColumnDefinition Width="160" />
-                                </Grid.ColumnDefinitions>
-
-                                <ComboBox Grid.Column="1" SelectedItem="{Binding Settings.OrderAchievementTypeThird}"
-                                                          ItemsSource="{Binding Source={StaticResource OrderAchievementType}}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource OrderAchievementTypeToStringConverter}}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <ComboBox Grid.Column="3" SelectedItem="{Binding Settings.OrderTypeThird}"
-                                                          ItemsSource="{Binding Source={StaticResource OrderType}}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource OrderTypeToStringConverter}}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                            </Grid>
-
-                            <Grid Grid.Row="6">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="160" />
-                                    <ColumnDefinition Width="10" />
-                                    <ColumnDefinition Width="160" />
-                                </Grid.ColumnDefinitions>
-                                
-                                <CheckBox Grid.Column="1" Grid.ColumnSpan="3" IsChecked="{Binding Settings.OrderGroupByUnlocked}">
-                                    <Label Content="{DynamicResource LOCSuccessStoryGroupByUnlocked}" />
-                                </CheckBox>
-                            </Grid>
-                        </Grid>
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
@@ -1262,6 +1140,8 @@
                                                 </Grid.ColumnDefinitions>
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="auto" />
+                                                    <RowDefinition Height="10" />
+                                                    <RowDefinition Height="auto" />
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Column="0">
@@ -1279,6 +1159,9 @@
                                                 <CheckBox Grid.Column="2" Grid.Row="0" IsChecked="{Binding Settings.IntegrationCompactShowDescription}">
                                                     <Label Content="{DynamicResource LOCSuccessStoryDescriptionInToolTip}" />
                                                 </CheckBox>
+
+                                                <interfaces:SettingsOrderAchievement Grid.Row="2" Grid.ColumnSpan="2" UsedGroupBy="True"
+                                                                                     OrderAchievement="{Binding Settings.IntegrationCompactOrderAchievement}" />
                                             </Grid>
                                         </Border>
                                     </Expander.Content>
@@ -1313,6 +1196,8 @@
                                                     <RowDefinition Height="auto" />
                                                     <RowDefinition Height="10" />
                                                     <RowDefinition Height="auto" />
+                                                    <RowDefinition Height="10" />
+                                                    <RowDefinition Height="auto" />
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Column="0">
@@ -1340,6 +1225,9 @@
                                                       IsChecked="{Binding Settings.IntegrationCompactPartialDisplayLastestOneLine}">
                                                     <Label Content="{DynamicResource LOCSuccessStoryIntegrationCompactPartialDisplayLastestOneLine}" />
                                                 </CheckBox>
+
+                                                <interfaces:SettingsOrderAchievement Grid.Row="6" Grid.ColumnSpan="2" UsedGroupBy="False"
+                                                                                     OrderAchievement="{Binding Settings.IntegrationCompactUnlockedOrderAchievement}" />
                                             </Grid>
                                         </Border>
                                     </Expander.Content>
@@ -1368,6 +1256,11 @@
                                                     <ColumnDefinition Width="*" />
                                                     <ColumnDefinition Width="*" />
                                                 </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="auto" />
+                                                    <RowDefinition Height="*" />
+                                                    <RowDefinition Height="auto" />
+                                                </Grid.RowDefinitions>
 
                                                 <Grid Grid.Column="0">
                                                     <Grid.ColumnDefinitions>
@@ -1383,6 +1276,9 @@
                                                 <CheckBox Grid.Column="2" Grid.Row="0" IsChecked="{Binding Settings.IntegrationCompactPartialShowDescription}">
                                                     <Label Content="{DynamicResource LOCSuccessStoryDescriptionInToolTip}" />
                                                 </CheckBox>
+
+                                                <interfaces:SettingsOrderAchievement Grid.Row="2" Grid.ColumnSpan="2" UsedGroupBy="False"
+                                                                                     OrderAchievement="{Binding Settings.IntegrationCompactLockedOrderAchievement}" />
                                             </Grid>
                                         </Border>
                                     </Expander.Content>
@@ -1524,14 +1420,19 @@
 
                                     <Expander.Content>
                                         <Border IsEnabled="{Binding ElementName=PART_IntegrationAchievements, Path=IsChecked}"
-				                            Margin="5" Padding="10"
-				                            BorderBrush="{DynamicResource PopupBorderBrush}"
-				                            BorderThickness="{DynamicResource PopupBorderThickness}">
+				                                Margin="5" Padding="10"
+				                                BorderBrush="{DynamicResource PopupBorderBrush}"
+				                                BorderThickness="{DynamicResource PopupBorderThickness}">
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="*" />
                                                     <ColumnDefinition Width="*" />
                                                 </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="auto" />
+                                                    <RowDefinition Height="10" />
+                                                    <RowDefinition Height="auto" />
+                                                </Grid.RowDefinitions>
 
                                                 <Grid Grid.Column="0">
                                                     <Grid.ColumnDefinitions>
@@ -1558,6 +1459,9 @@
                                                         Grid.Column="1" VerticalAlignment="Center" Margin="20,0,5,0" Name="sColCount" />
                                                     <Label Grid.Column="2" Content="{Binding ElementName=sColCount, Path=Value}" HorizontalAlignment="Center" />
                                                 </Grid>
+
+                                                <interfaces:SettingsOrderAchievement Grid.Row="2" Grid.ColumnSpan="2" UsedGroupBy="True"
+                                                                                     OrderAchievement="{Binding Settings.IntegrationListOrderAchievement}" />
                                             </Grid>
                                         </Border>
                                     </Expander.Content>
